# crawl-topcv-jobs

./: .gitignore  README.md  main.py  pyproject.toml  scrape_topcv_company.py  topcv.ipynb  topcv_data_analyst_jobs.csv  topcv_data_analyst_jobs.xlsx
airflow/: Dockerfile  docker-compose.yml  rebuild_airflow.ps1  requirements.txt
airflow/dags/: scrape_topcv_company_dag.py  scrape_topcv_jobs_dag.py
credentials/: google-service-account-sample.json
data-files/: topcv_data_analyst_jobs.csv  topcv_data_analyst_jobs.xlsx
scripts/: scrape_topcv_company.py  scrape_topcv_jobs.py  upload_to_sheets.py
